argocd/system/argocd/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-lb
    external-dns.alpha.kubernetes.io/hostname: argocd.k8s0.weirwd.net
spec:
  rules:
  - host: 'argocd.k8s0.weirwd.net'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
